# Glaux

./: .gitignore  Cargo.toml  README.md  build.rs
assets/texts/: help.md  model-intro.md
docs/: 00-index.md  decision-log.md  milestones.md  phase-plan.md  runtime-notes.md
docs/design/: architecture.md  context-policy.md  model-selection.md  portable-packaging.md  single-exe-packaging.md  ui-spec.md
docs/user-stories/: README.md  summary.md  user-stories-matrix.csv
scripts/: bootstrap-runtime.ps1  build-release.ps1  run-user-story-tests.mjs  user-story-catalog.mjs
src/: app.rs  config.rs  context.rs  debug_agent_log.rs  main.rs  model_state.rs  paths.rs  startup_progress.rs  theme.rs
src/api/: chat.rs  prompt.rs
src/runtime/: embedded.rs  extractor.rs  mod.rs  process.rs
src/ui/: chat.rs  drawers.rs  mod.rs  prompt_assist.rs
